@@ -1,3 +1,7 @@
+2012-12-02         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* vms_gawk.c (CmdName): Force to just "GAWK".
+
 2012-11-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* vmstest.com: Fix typo in applying previous patch.
